fix: search by input in the drop-down lists ok

--- a/index.html
+++ b/index.html
@@ -32,9 +32,10 @@
             <!-----------------------TAG DROPDOWN------------------------------------------------------------------------------->
             <div class="container_tags">
                 <div class="dropdown filter_select_ingredients" id="tags_ingredient">
-                    <input id="ingredients_input" class="tag_input select_ingredient filter_select_ingredients" placeholder="Ingrédients" type="text">
+                    <input id="ingredients_input" class="tag_input select_ingredient filter_select_ingredients" placeholder="Ingrédients" type="text" autocomplete="off">
                     <em class="fas fa-chevron-down arrow arrow_ingredients"></em>
                     <ul class="filter_content filter_ingredients filter_select_ingredients hidden_ul"></ul>
+                    <!-- <p>test</p> -->
                 </div>
                 <div class="dropdown filter_select_appareils" id="tags_appareil">
                     <input id="appareils_input" class="tag_input select_appareils filter_select_appareils" placeholder="Appareils" type="text">
