feat: modif algo2 html

--- a/index.html
+++ b/index.html
@@ -32,19 +32,19 @@
             <!-----------------------TAG DROPDOWN------------------------------------------------------------------------------->
             <div class="container_tags">
                 <div class="dropdown filter_select_ingredients" id="tags_ingredient">
-                    <input id="ingredients_input" class="tag_input select_ingredient filter_select_ingredients" placeholder="Ingrédients" type="text">
+                    <input id="ingredients_input" class="tag_input select_ingredient filter_select_ingredients" placeholder="Ingrédients" type="text" autocomplete="off">
                     <em class="fas fa-chevron-down arrow arrow_ingredients"></em>
-                    <ul class="filter_content filter_ingredients filter_select_ingredients none"></ul>
+                    <ul class="filter_content filter_ingredients filter_select_ingredients hidden_ul"></ul>
                 </div>
                 <div class="dropdown filter_select_appareils" id="tags_appareil">
                     <input id="appareils_input" class="tag_input select_appareils filter_select_appareils" placeholder="Appareils" type="text">
                     <em class="fas fa-chevron-down arrow arrow_appareils"></em>
-                    <ul class="filter_content filter_appareils filter_select_appareils none"></ul>
+                    <ul class="filter_content filter_appareils filter_select_appareils hidden_ul"></ul>
                 </div>
                 <div class="dropdown filter_select_ustensiles" id="tags_ustensile">
                     <input id="ustensiles_input" class="tag_input select_ustensile filter_select_ustensiles" placeholder="Ustensiles" type="text">
                     <em class="fas fa-chevron-down arrow arrow_ustensiles"></em>
-                    <ul class="filter_content filter_ustensiles filter_select_ustensiles none"></ul> 
+                    <ul class="filter_content filter_ustensiles filter_select_ustensiles hidden_ul"></ul> 
                 </div>
             </div>
         </section>
