--- a/index.html
+++ b/index.html
@@ -7,35 +7,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Les petits plats, ne chercher plus ce que vous allez cuisiner !">
     <link href="./style.css" rel="stylesheet">
-    </link>
     <script src="https://kit.fontawesome.com/1f5b0f9d4b.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,200;0,400;0,500;1,600&family=Lato&display=swap"
-        rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Kanit:ital,wght@0,200;0,400;0,500;1,600&family=Lato&display=swap" rel="stylesheet">
     <title>Les petits plats</title>
 </head>
 
 <body>
     <header>
-        <img src="./assets/lespetitesplats.png" alt="logo les petits plats" id="logo">
+        <h1>
+            <img src="./assets/lespetitesplats.png" alt="logo les petits plats" id="logo">
+        </h1>
     </header>
     <main>
-        <!-------------------------------Search------------------------------------------------------------------------------------->
+            <!-- MAIN SEARCHBAR -->
         <section id="section_search">
-            <input type="text" id="searchbar" placeholder="Rechercher une recette">
-            <img src="./assets/search.svg" id="logo_search" >
-                
-            <!-----------------------TAG SEARCHED------------------------------------------------------------------------------->
+            <h2>
+                <input type="text" id="searchbar" placeholder="Rechercher une recette">
+                <img src="./assets/search.svg" alt="logo loupe" id="logo_search">
+            </h2>
+            <!-- TAG SEARCHED -->
             <div class="tags_searched" id="tags_searched"></div>
-            <!-----------------------TAG DROPDOWN------------------------------------------------------------------------------->
+            <!-- TAG DROPDOWN -->
             <div class="container_tags">
                 <div class="dropdown filter_select_ingredients" id="tags_ingredient">
                     <input id="ingredients_input" class="tag_input select_ingredient filter_select_ingredients" placeholder="Ingrédients" type="text" autocomplete="off">
                     <em class="fas fa-chevron-down arrow arrow_ingredients"></em>
                     <ul class="filter_content filter_ingredients filter_select_ingredients hidden_ul"></ul>
-                    <!-- <p>test</p> -->
                 </div>
                 <div class="dropdown filter_select_appareils" id="tags_appareil">
                     <input id="appareils_input" class="tag_input select_appareils filter_select_appareils" placeholder="Appareils" type="text">
@@ -49,13 +48,11 @@
                 </div>
             </div>
         </section>
-        <!-----------------------GALERY------------------------------------------------------------------------------------->
-        <section id="section_result">
+        <!-- GALERY -->
+        <div id="section_result">
             <div class="recette_section"></div>
-        </section>
+        </div>
     </main>
-
     <script type="module" src="./scripts/index.js"></script>
 </body>
-
 </html>
